<resources>
    <string name="app_name">My Application</string>
    <string name="hello">Hello!</string>
    <string name="fill_det">Fill in your details or continue via social media</string>
    <string name="password">Password</string>
    <string name="restore">Restore</string>
    <string name="login">Log in</string>
    <string name="are_u_new">Are you new to it?</string>
    <string name="create">Create a user</string>
    <string name="title_activity_home" translatable="false">Home</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_like" translatable="false">Like</string>
    <string name="title_lk" translatable="false">User</string>
    <string name="wellcome" translatable="false">Wellcome</string>
    <string name="start" translatable="false">Start</string>
    <string name="startWay" translatable="false">Let’s Start Journey </string>
    <string name="UmCollection" translatable="false">Smart, Gorgeous &amp; Fashionable Collection Explor Now</string>
    <string name="Power" translatable="false">You Have the Power To</string>
    <string name="Room" translatable="false">There Are Many Beautiful And Attractive Plants To Your Room</string>
    <string name="Continie" translatable="false">Continie</string>
    <string name="Category" translatable="false">Select Category</string>
    <string name="Popular" translatable="false">Popular Shoes</string>
    <string name="all" translatable="false">See all</string>
    <string name="Action" translatable="false">New Arrivals</string>
    <string name="Explore" translatable="false">Explore</string>

    <string name="Favorite" translatable="false">Favorite</string>
    <string name="SneakerShop" translatable="false">Sneaker Shop</string>
    <string name="Search" translatable="false">Search</string>

    <string name="RegisterAccount">Register Account</string>
    <string name="YourName">Your Name</string>
    <string name="SingUp">Register Account</string>
    <string name="SingUP2">Sing Up</string>
    <string name="YourName">Your Name</string>
    <string name="SingIn">Sing In</string>
    <string name="NewUser">Already Have Account</string>
    <string name="Create">Log In</string>
    <string name="qeustion">\?</string>
    <string name="Forgot">Forgot Password</string>
    <string name="EnterEmail">Enter your Email account to reset
your password</string>
    <string name="Media">Fill your details or continue with social media</string>
    <string name="Sned">Send</string>

    <string name="Profile">Profile</string>
    <string name="Cart">Cart</string>
    <string name="Favourite">Favourite</string>
    <string name="Item">Item</string>
    <string name="Notificatin">Notification</string>
    <string name="settings">Setting</string>
    <string name="Exit">Exit</string>
    <string name="action_settings">action_settings</string>

</resources>
