<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_foreground"
        android:title="@string/title_activity_home" />

    <item
        android:id="@+id/navigation_like"
        android:icon="@drawable/like_foreground"
        android:title="@string/title_like" />

    <item
        android:enabled="false"
        android:title=" "/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification_foreground"
        android:title="@string/title_notifications"/>

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/user_foreground"
        android:title="@string/title_lk" />

</menu>